--- a/Microsoft.Toolkit.Uwp.UI.Controls/RangeSelector/RangeSelector.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/RangeSelector/RangeSelector.xaml
@@ -8,22 +8,19 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:RangeSelector">
-                    <Grid Height="40">
+                    <Grid x:Name="ControlGrid" Height="{TemplateBinding Height}">
                         <Grid.Resources>
                             <Style x:Key="SliderThumbStyle"
                                    TargetType="Thumb">
                                 <Setter Property="UseSystemFocusVisuals" Value="True" />
                                 <Setter Property="BorderThickness" Value="0" />
-                                <Setter Property="Background" Value="{ThemeResource SystemControlForegroundAccentBrush}" />
-                                <Setter Property="RenderTransform">
-                                    <Setter.Value>
-                                        <TranslateTransform X="-20" />
-                                    </Setter.Value>
-                                </Setter>
+                                <Setter Property="Background" Value="{ThemeResource SystemControlForegroundAccentBrush}" />                              
                                 <Setter Property="Template">
                                     <Setter.Value>
                                         <ControlTemplate TargetType="Thumb">
-                                            <Grid Width="40" Height="40" Background="Transparent">
+                                            <Grid Width="{TemplateBinding Width}" 
+                                                  Height="{TemplateBinding Height}" 
+                                                  Background="Transparent">
                                                 <Border Width="8"
                                                     Height="24"                                                    
                                                     HorizontalAlignment="Center"
@@ -38,8 +35,7 @@
                             </Style>
                         </Grid.Resources>
 
-                        <Border x:Name="OutOfRangeContentContainer" 
-                                Height="40"
+                        <Border x:Name="OutOfRangeContentContainer"                                 
                                 Margin="12,0"
                                 Background="Transparent">
                             <Rectangle x:Name="BackgroundElement"
@@ -49,14 +45,13 @@
                         <Canvas x:Name="ContainerCanvas"
                                 Margin="12,0"
                                 Background="Transparent">
-                            <Rectangle x:Name="ActiveRectangle"
-                                       Canvas.Top="19"                                       
+                            <Rectangle x:Name="ActiveRectangle"                                                                     
                                        Height="2"
                                        Fill="{TemplateBinding Foreground}" />
                             <Thumb x:Name="MinThumb"
                                    AutomationProperties.Name="Min thumb"
                                    Background="{TemplateBinding Foreground}"
-                                   IsTabStop="True"                                  
+                                   IsTabStop="True" 
                                    Style="{StaticResource SliderThumbStyle}"
                                    TabIndex="0" />
                             <Thumb x:Name="MaxThumb"
