--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/EmojiIcon/EmojiPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/EmojiIcon/EmojiPage.xaml
@@ -3,7 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:emoji="using:Microsoft.Toolkit.Uwp.UI.Helpers.Emoji"
+      xmlns:emoji="using:Microsoft.Toolkit.Uwp.UI.Helpers"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
 
