ViewExtensions and sample Added TitleBarExtensions Added StatusBarExtensions Added ApplicationViewExtensions Added documentation for ViewExtensions

--- a/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
@@ -6,6 +6,12 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:viewHelper="using:Microsoft.Toolkit.Uwp.UI.Extensions"
+      viewHelper:StatusBarExtensions.IsVisible="False"
+      viewHelper:TitleBarExtensions.BackgroundColor="{StaticResource Grey-01}"
+      viewHelper:TitleBarExtensions.ButtonBackgroundColor="{StaticResource Grey-03}"
+      viewHelper:TitleBarExtensions.ButtonForegroundColor="{StaticResource Grey-04}"
+      viewHelper:TitleBarExtensions.ForegroundColor="{StaticResource Grey-04}"
       SizeChanged="Page_SizeChanged"
       mc:Ignorable="d">
     <Page.Resources>
@@ -119,8 +125,8 @@
                     <HyperlinkButton x:Name="GitHub"
                                      Grid.Column="2"
                                      Margin="0,0,10,0"
-                                     Content="Github"
                                      Click="GitHub_OnClick"
+                                     Content="Github"
                                      Foreground="{ThemeResource TextBoxPlaceholderTextThemeBrush}" />
                 </Grid>
                 <Pivot x:Name="InfoAreaPivot"
@@ -161,10 +167,12 @@
 
                     <PivotItem x:Name="DocumentationPivotItem"
                                Header="DOCUMENTATION">
-                        <ScrollViewer Background="{StaticResource Brush-White}" Padding="10,5" x:Name="DocumentationScrollViewer">
-                            <controls:MarkdownTextBlock x:Name="DocumentationTextblock" 
-                                                        Foreground="{StaticResource Brush-Grey-01}" 
-                                                        LinkClicked="DocumentationTextblock_OnLinkClicked"/>
+                        <ScrollViewer x:Name="DocumentationScrollViewer"
+                                      Padding="10,5"
+                                      Background="{StaticResource Brush-White}">
+                            <controls:MarkdownTextBlock x:Name="DocumentationTextblock"
+                                                        Foreground="{StaticResource Brush-Grey-01}"
+                                                        LinkClicked="DocumentationTextblock_OnLinkClicked" />
                         </ScrollViewer>
                     </PivotItem>
                 </Pivot>
