--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Carousel/Carousel.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Carousel/Carousel.xaml
@@ -2,8 +2,8 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-      xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
 
@@ -12,30 +12,33 @@
 
     <Grid Background="{StaticResource Brush-Grey-05}">
 
-        <Border Margin="0"  >
+        <Border Margin="0">
 
-            <controls:Carousel Background="{StaticResource Brush-Grey-05}"
-                        x:Name="carouselControl"
-                        SelectedIndex="{Binding SelectedIndex.Value, Mode=TwoWay}"
-                        ItemDepth="{Binding ItemDepth.Value, Mode=OneWay}" 
-                        Orientation="{Binding Orientation.Value, Mode=OneWay}"
-                        ItemMargin="{Binding ItemMargin.Value, Mode=OneWay}"
-                        ItemRotationX="{Binding ItemRotationX.Value, Mode=OneWay}" 
-                        ItemRotationY="{Binding ItemRotationY.Value, Mode=OneWay}"
-                        ItemRotationZ ="{Binding ItemRotationZ.Value, Mode=OneWay}"
-                        InvertPositive="{Binding InvertPositive.Value, Mode=OneWay}">
+            <controls:Carousel x:Name="carouselControl"
+                               Background="{StaticResource Brush-Grey-05}"
+                               InvertPositive="{Binding InvertPositive.Value, Mode=OneWay}"
+                               ItemDepth="{Binding ItemDepth.Value, Mode=OneWay}"
+                               ItemMargin="{Binding ItemMargin.Value, Mode=OneWay}"
+                               ItemRotationX="{Binding ItemRotationX.Value, Mode=OneWay}"
+                               ItemRotationY="{Binding ItemRotationY.Value, Mode=OneWay}"
+                               ItemRotationZ="{Binding ItemRotationZ.Value, Mode=OneWay}"
+                               Orientation="{Binding Orientation.Value, Mode=OneWay}"
+                               SelectedIndex="{Binding SelectedIndex.Value, Mode=TwoWay}">
                 <controls:Carousel.EasingFunction>
                     <CubicEase EasingMode="EaseOut" />
                 </controls:Carousel.EasingFunction>
                 <controls:Carousel.ItemTemplate>
                     <DataTemplate>
-                        <Grid >
+                        <Grid>
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
-                            <Image Source="{Binding BitmapImage}" Width="200" Height="200" VerticalAlignment="Bottom"
-                                Stretch="Uniform"></Image>
+                            <Image Width="200"
+                                   Height="200"
+                                   VerticalAlignment="Bottom"
+                                   Source="{Binding BitmapImage}"
+                                   Stretch="Uniform" />
                         </Grid>
                     </DataTemplate>
                 </controls:Carousel.ItemTemplate>
