--- a/Microsoft.Toolkit.Uwp.UI.Controls/Carousel/Carousel.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Carousel/Carousel.xaml
@@ -1,25 +1,25 @@
-﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.UI.Controls">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:local="using:Microsoft.Toolkit.Uwp.UI.Controls">
 
-    <Style TargetType="local:Carousel" >
+    <Style TargetType="local:Carousel">
         <Setter Property="ItemsPanel">
             <Setter.Value>
                 <ItemsPanelTemplate>
-                    <local:CarouselPanel  />
+                    <local:CarouselPanel />
                 </ItemsPanelTemplate>
             </Setter.Value>
         </Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="local:Carousel">
-                    <Grid BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" 
-                          BorderThickness="{TemplateBinding BorderThickness}" 
-                          HorizontalAlignment="Stretch" 
-                          VerticalAlignment="Stretch" >
-                        <ItemsPresenter  HorizontalAlignment="Stretch" 
-                          VerticalAlignment="Stretch" />
+                    <Grid HorizontalAlignment="Stretch"
+                          VerticalAlignment="Stretch"
+                          Background="{TemplateBinding Background}"
+                          BorderBrush="{TemplateBinding BorderBrush}"
+                          BorderThickness="{TemplateBinding BorderThickness}">
+                        <ItemsPresenter HorizontalAlignment="Stretch"
+                                        VerticalAlignment="Stretch" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
