--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Carousel/CarouselPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Carousel/CarouselPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.Carousel"
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.CarouselPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
@@ -7,13 +7,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
 
-
-
-
     <Grid Background="{StaticResource Brush-Grey-05}">
-
         <Border Margin="0">
-
             <controls:Carousel x:Name="carouselControl"
                                Background="{StaticResource Brush-Grey-05}"
                                InvertPositive="{Binding InvertPositive.Value, Mode=OneWay}"
@@ -29,24 +24,14 @@
                 </controls:Carousel.EasingFunction>
                 <controls:Carousel.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
-                            <Image Width="200"
+                        <Image Width="200"
                                    Height="200"
                                    VerticalAlignment="Bottom"
-                                   Source="{Binding BitmapImage}"
+                                   Source="{Binding Thumbnail}"
                                    Stretch="Uniform" />
-                        </Grid>
                     </DataTemplate>
                 </controls:Carousel.ItemTemplate>
-
             </controls:Carousel>
         </Border>
-
-
-
     </Grid>
 </Page>
