--- a/Microsoft.Toolkit.Uwp.UI.Controls/MarkdownTextBlock/MarkdownTextBlock.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/MarkdownTextBlock/MarkdownTextBlock.xaml
@@ -1,16 +1,29 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls">
+
+    <ResourceDictionary.ThemeDictionaries>
+        <ResourceDictionary x:Key="Default"/>
+        <ResourceDictionary x:Key="Light">
+            <SolidColorBrush x:Key="MarkdownBorderBrush" Color="#FFBEBEBE" />
+            <SolidColorBrush x:Key="MarkdownBackgroundBrush" Color="#FFE0E0E0" />
+        </ResourceDictionary>
+        <ResourceDictionary x:Key="Dark">
+            <SolidColorBrush x:Key="MarkdownBorderBrush" Color="#FF424242" />
+            <SolidColorBrush x:Key="MarkdownBackgroundBrush" Color="#FF202020" />
+        </ResourceDictionary>
+    </ResourceDictionary.ThemeDictionaries>
+    
     <Style TargetType="controls:MarkdownTextBlock">
         <Setter Property="IsTabStop" Value="False" />
         <Setter Property="LinkForeground" Value="{ThemeResource SystemControlHighlightAccentBrush}" />
-        <Setter Property="QuoteBackground" Value="#FFE0E0E0" />
-        <Setter Property="QuoteBorderBrush" Value="#FFBEBEBE" />
+        <Setter Property="QuoteBackground" Value="{ThemeResource MarkdownBackgroundBrush}" />
+        <Setter Property="QuoteBorderBrush" Value="{ThemeResource MarkdownBorderBrush}" />
         <Setter Property="QuoteBorderThickness" Value="2, 0, 0, 0" />
         <Setter Property="QuoteMargin" Value="7, 5, 0, 5" />
         <Setter Property="QuotePadding" Value="7, 2, 0, 4" />
-        <Setter Property="CodeBackground" Value="#FFE0E0E0" />
-        <Setter Property="CodeBorderBrush" Value="#FFBEBEBE" />
+        <Setter Property="CodeBackground" Value="{ThemeResource MarkdownBackgroundBrush}" />
+        <Setter Property="CodeBorderBrush" Value="{ThemeResource MarkdownBorderBrush}" />
         <Setter Property="CodeBorderThickness" Value="2" />
         <Setter Property="CodeFontFamily" Value="Consolas" />
         <Setter Property="CodeMargin" Value="0, 7, 0, 7" />
@@ -33,14 +46,14 @@
         <Setter Property="Header6FontWeight" Value="Normal" />
         <Setter Property="Header6FontSize" Value="15" />
         <Setter Property="Header6Margin" Value="0, 10, 0, 0" />
-        <Setter Property="HorizontalRuleBrush" Value="#FFBEBEBE" />
+        <Setter Property="HorizontalRuleBrush" Value="{ThemeResource MarkdownBorderBrush}" />
         <Setter Property="HorizontalRuleMargin" Value="0, 7, 0, 7" />
         <Setter Property="HorizontalRuleThickness" Value="2" />
         <Setter Property="ListMargin" Value="0, 5, 0, 5" />
         <Setter Property="ListGutterWidth" Value="32" />
         <Setter Property="ListBulletSpacing" Value="8" />
         <Setter Property="ParagraphMargin" Value="0, 5, 0, 5" />
-        <Setter Property="TableBorderBrush" Value="#FFBEBEBE" />
+        <Setter Property="TableBorderBrush" Value="{ThemeResource MarkdownBorderBrush}" />
         <Setter Property="TableBorderThickness" Value="1" />
         <Setter Property="TableCellPadding" Value="9, 4, 9, 4" />
         <Setter Property="TableMargin" Value="0, 5, 0, 5" />
@@ -57,5 +70,3 @@
         </Setter>
     </Style>
 </ResourceDictionary>
-
-
