--- a/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
@@ -6,6 +6,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:developerTools="using:Microsoft.Toolkit.Uwp.DeveloperTools"
       SizeChanged="Page_SizeChanged"
       mc:Ignorable="d">
     <Page.Resources>
@@ -89,9 +90,9 @@
                 <Frame x:Name="NavigationFrame" />
                 <!--Uncomment this control to help you determine where the focus is.
                 This could be useful when validating accessibility of your control-->
-                <!--<local:FocusTracker VerticalAlignment="Bottom" 
-                        HorizontalAlignment="Center"
-                        IsRunning="True"/>-->
+                <developerTools:FocusTracker VerticalAlignment="Bottom" 
+                                             HorizontalAlignment="Center"
+                                             IsRunning="True"/>
             </Grid>
             <Grid x:Name="InfoAreaGrid"
                   Background="{StaticResource Brush-Grey-04}">
