--- a/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
@@ -90,9 +90,9 @@
                 <Frame x:Name="NavigationFrame" />
                 <!--Uncomment this control to help you determine where the focus is.
                 This could be useful when validating accessibility of your control-->
-                <developerTools:FocusTracker VerticalAlignment="Bottom" 
+                <!--<developerTools:FocusTracker VerticalAlignment="Bottom" 
                                              HorizontalAlignment="Center"
-                                             IsRunning="True"/>
+                                             IsRunning="True"/>-->
             </Grid>
             <Grid x:Name="InfoAreaGrid"
                   Background="{StaticResource Brush-Grey-04}">
