Revert sample bind and set IsVisible to false in Shell.xaml

--- a/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
@@ -11,6 +11,7 @@
       extensions:TitleBar.ButtonBackgroundColor="{StaticResource Grey-03}"
       extensions:TitleBar.ButtonForegroundColor="{StaticResource Grey-04}"
       extensions:TitleBar.ForegroundColor="{StaticResource Grey-04}"
+      extensions:StatusBar.IsVisible="False"
       SizeChanged="Page_SizeChanged"
       mc:Ignorable="d">
     <Page.Resources>
