Add focus visual style

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Carousel/Carousel.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Carousel/Carousel.xaml
@@ -13,13 +13,13 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="local:Carousel">
-                    <Grid HorizontalAlignment="Stretch"
-                          VerticalAlignment="Stretch"
+                    <Grid HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
+                          VerticalAlignment="{TemplateBinding VerticalAlignment}"
                           Background="{TemplateBinding Background}"
                           BorderBrush="{TemplateBinding BorderBrush}"
                           BorderThickness="{TemplateBinding BorderThickness}">
-                        <ItemsPresenter HorizontalAlignment="Stretch"
-                                        VerticalAlignment="Stretch" />
+                        <ItemsPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                        VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
